--- a/src/pages/css/category.css
+++ b/src/pages/css/category.css
@@ -18,6 +18,12 @@
 .content {
     max-width: 1200px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.header {
+    display: inline-block;
 }
 
 .categories {
