--- a/src/components/Header/css/header.css
+++ b/src/components/Header/css/header.css
@@ -14,3 +14,38 @@
     width: 31px;
     height: 28px;
 }
+
+.currencies {
+    display: flex;
+}
+
+.header-korz {
+    width: 20px;
+    height: 20px;
+    margin-left: 22px;
+}
+
+.dollar-sign {
+    font-size: 18px;
+    font-family: sans-serif;
+    font-weight: 500;
+}
+
+.header-vector {
+    width: 6px;
+    height: 3px;
+    margin-left: 4px;
+    margin-top: 16px;
+}
+
+.right-icons {
+    display: flex;
+}
+
+.currencies:hover {
+    cursor: pointer;
+}
+
+.header-korz:hover{
+    cursor: pointer;
+}
